// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterQuestionnaire should filter answers types correctly 1`] = `
Array [
  Object {
    "id": "1",
    "pages": Array [
      Object {
        "answers": Array [
          Object {
            "id": "2",
            "label": "Answer 2",
            "type": "Number",
          },
        ],
        "id": "1",
      },
      Object {
        "answers": Array [],
        "id": "2",
      },
    ],
  },
]
`;

exports[`filterQuestionnaire should not return any answers when no answer types specified 1`] = `
Array [
  Object {
    "id": "1",
    "pages": Array [
      Object {
        "answers": Array [],
        "id": "1",
      },
      Object {
        "answers": Array [],
        "id": "2",
      },
    ],
  },
]
`;

exports[`filterQuestionnaire should only allow selection of answers before the current page 1`] = `
Array [
  Object {
    "id": "1",
    "pages": Array [
      Object {
        "answers": Array [
          Object {
            "id": "1",
            "label": "Answer 1",
            "type": "TextField",
          },
          Object {
            "id": "2",
            "label": "Answer 2",
            "type": "Number",
          },
        ],
        "id": "1",
      },
    ],
  },
]
`;

exports[`filterQuestionnaire should return child answers for CompositeAnswers 1`] = `
Array [
  Object {
    "id": "1",
    "pages": Array [
      Object {
        "answers": Array [
          Object {
            "displayName": "Earliest",
            "id": "20",
            "type": "TextField",
          },
          Object {
            "displayName": "Latest",
            "id": "21",
            "type": "TextField",
          },
          Object {
            "id": "2",
            "label": "Answer 2",
            "type": "Number",
          },
        ],
        "id": "1",
      },
      Object {
        "answers": Array [
          Object {
            "id": "3",
            "label": "Answer 3",
            "type": "Currency",
          },
        ],
        "id": "2",
      },
    ],
  },
]
`;

exports[`filterQuestionnaire should return empty array when no questionnaire 1`] = `Array []`;

exports[`filterQuestionnaire shouldn't show current section if on first page of section 1`] = `
Array [
  Object {
    "id": "1",
    "pages": Array [
      Object {
        "answers": Array [
          Object {
            "id": "1",
            "label": "Answer 1",
            "type": "TextField",
          },
          Object {
            "id": "2",
            "label": "Answer 2",
            "type": "Number",
          },
        ],
        "id": "1",
      },
      Object {
        "answers": Array [
          Object {
            "id": "3",
            "label": "Answer 3",
            "type": "Currency",
          },
        ],
        "id": "2",
      },
    ],
  },
]
`;
